# omikuji

./: README.md  milksnake_tasks.py  pyproject.toml  setup.py
.github/workflows/: ci.yaml  release.yaml
